# ramus-cli

codex-rs/core/: Cargo.toml
codex-rs/core/src/: client_common.rs  codex.rs  environment_context.rs  lib.rs
codex-rs/core/tests/: client.rs  prompt_caching.rs
codex-rs/exec/: Cargo.toml
codex-rs/exec/src/: cli.rs  lib.rs  plan_emitter.rs
docs/: ramus-cli-plan.md
